# ReinforcementLearning

./: .gitignore  Dockerfile  LICENSE  README.md  conftest.py  mypy.ini  pyproject.toml  tox.ini
devops/: docker_system_dependencies.sh  helpers.sh  install_jupyterlab_plugins.sh  shortcuts.jupyter-lab-settings
oracle/: __init__.py  common.py  constants.py
oracle/rl/: __init__.py  atari_wrappers.py  rl_utils.py  wrappers.py
oracle/rl/a2c/: models.py
oracle/rl/a2c/hands_on/: a2c_pong.py
oracle/rl/a3c/: 02_a3c_grad.py
oracle/rl/dqn/: models.py  train.py
oracle/rl/envs/: __init__.py  continuous_cartpole.py
oracle/rl/ppo/: train.py
oracle/rl/reinforce/: models.py  train.py
oracle/rl/sac/: main.py  replay_memory.py  sac.py
oracle/utils/: math_utils.py  pandas_utils.py
rl/: __init__.py  common.py  constants.py
rl/algos/: __init__.py  cross_entropy.py
rl/algos/a2c/: models.py
rl/algos/a2c/hands_on/: a2c_pong.py
rl/algos/a3c/: 01_a3c_data.py  02_a3c_grad.py
rl/algos/dqn/: train.py
rl/algos/ppo/: train.py
rl/algos/reinforce/: models.py  train.py
rl/algos/sac/: main.py  model.py  sac.py  sac_utils.py
rl/utils/: gym_utils.py  misc_utils.py  torch_utils.py
tests/algos/: test_cross_entropy.py  test_dqn.py  test_reinforce.py  test_rl_utils.py  test_sac.py  test_wrappers.py
tests/rl/: test_cross_entropy.py  test_dqn.py  test_reinforce.py  test_rl_utils.py  test_sac.py  test_wrappers.py
tests/utils/: test_misc_utils.py  test_torch_utils.py
